--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-      <main class="main" role="main">
+      <main class="main">
         <div class="container">
           <img src="images/image-qr-code.png" alt="qr code image" class="qr" />
           <h1>
